--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <div>
 	<li>apples</li>
 	<li>oranges</li>	
-	<li>tomato</li>	
+	<li>tomato</li>		
+	<li>pineapple</li>
 
 </div>
-    g
+    
 </body>
 </html>
