added item to list

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 	<li>tomato</li>		
 	<li>pineapple</li>
 	<li>potato</li>
+	<li>peppers</li>
 
 </div>
     
 </body>
 </html>
+
+practice some more git and make a new repo and follow video again? then continue with codecademy 
