--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<title></title>
 </head>
+
+<h1> Shopping List </h1>
+
 <body>
-<div>
+
 	<li>apples</li>
 	<li>oranges</li>	
 	<li>tomato</li>		
@@ -12,7 +15,6 @@
 	<li>potato</li>
 	<li>peppers</li>
 
-</div>
     
 </body>
 </html>
