--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
 
 <body>
 
+<ol>
+
 	<li>apples</li>
 	<li>oranges</li>	
 	<li>tomato</li>		
 	<li>pineapple</li>
 	<li>potato</li>
-	<li>peppers</li>
+	<li>peppers</li>	
+	<li>celery</li>
+	<li>strawberrys</li>
 
-
+</ol>
 	</body>
 	</html>
 
