added shopping list heading

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
 <body>
 
+<h2>
+Check out this shopping list
+</h2>
+
 <ol>
 
 	<li>apples</li>
@@ -20,6 +24,8 @@
 	<li>strawberrys</li>
 
 </ol>
+
+
 	</body>
 	</html>
 
